# GitPython

./: .gitignore  .gitlab-ci.yml  .pypirc  README.md  app.py  app2.py  lint_gitlab.py  puff.toml  requirements.txt  secrets.token_hex(32)  test_example.py  test_example.spec
apipy/: pyproject.toml
builds/428joaj-0/0/LuSiama/testpythongit.tmp/git-template/: config
builds/kcvWbNLxd/0/LuSiama/testpythongit.tmp/git-template/: config
builds/sZwi4Y-9N/0/LuSiama/testpythongit.tmp/git-template/: config
builds/xgBBbyiAp/0/LuSiama/testpythongit.tmp/git-template/: config
test/: test_fix.py
