[tool.poetry]
name = "apipy"
version = "0.1.0"
description = ""
authors = ["CI <ci@example.com>"]
readme = "README.md"
packages = [{include = "apipy"}]

[tool.poetry.dependencies]
python = "^3.12"
"\u001b[24" = "~"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
